Updated documentation of the addon

--- a/grott-beta/.README.j2
+++ b/grott-beta/.README.j2
@@ -2,15 +2,14 @@
 
 ![Release][release-shield]][release] ![Project Stage][project-stage-shield] ![Project Maintenance][maintenance-shield]
 
-
-
 This addon allow you to run a local version of grott with the HA plugin
 and auto discovery enabled.
 
 The data is fowarded to the growatt's server.
 The grott server decode them and send them to your HA instance.
 
-This addon is based on the 2.7.8
+This addon is based on the 2.8 Branch of grott.
+
 [grott](https://github.com/johanmeijer/grott) code
 and current grott_ha extension.
 
