More reference to documentation

--- a/grott-beta/.README.j2
+++ b/grott-beta/.README.j2
@@ -8,10 +8,9 @@ and auto discovery enabled.
 The data is fowarded to the growatt's server.
 The grott server decode them and send them to your HA instance.
 
-This addon is based on the 2.8 Branch of grott.
+This addon is based on the 2.8 Branch of [grott](https://github.com/johanmeijer/grott) code and current grott_ha extension.
 
-[grott](https://github.com/johanmeijer/grott) code
-and current grott_ha extension.
+[:books: Read the full add-on documentation][docs]
 
 {% if channel == "edge" %}
 ## WARNING! THIS IS AN EDGE VERSION!
@@ -56,3 +55,4 @@ If you are more interested in stable releases of our add-ons:
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-production%20ready-brightgreen.svg
 [release-shield]: https://img.shields.io/badge/version-{{ version }}-blue.svg
 [release]: {{ repo }}/tree/{{ version }}
+[docs]: https://github.com/egguy/addon-grott-beta/blob/main/grott-beta/DOCS.md
